登录功能完善,添加好友功能开发